--- a/quizsanber-alzi/README
+++ b/quizsanber-alzi/README
@@ -20,4 +20,4 @@ Jawaban : https://docs.google.com/document/d/1ufZ0WQF1CmvcvgGSOhWMJmswr7lIHa_-8x
 6. sertakan juga config nginx dan bukti config menggunakan s3 dan rds 
 Jawaban : Link Git (https://github.com/Alzisptd/tugas-devops-sanbercampus-batch-4/tree/main/quizsanber-alzi)
 
-kumpulkan menggunakan github dan link subdomainnya
+ssh ubuntu@13.211.209.168
