--- a/quizsanber-alzi/README
+++ b/quizsanber-alzi/README
@@ -7,11 +7,11 @@ Jawaban : https://alzi.sanbercode.com/
 3. gunakan s3 untuk upload media di wordpress 
 Jawaban :https://alzi.sanbercode.com/wp-admin/media-new.php 
 user = alzi 
-pass = KMiwEtr@TbdNLe7Rd!bLhboI
+pass = s@jovD4YN9W&ZK9C#s
 
 4. gunakan rds untuk database wordpress 
 Jawaban : 
-Connect DB : mysql -h database-1.ct6w2w4i4qpo.ap-southeast-2.rds.amazonaws.com -P 3306 -u alzi -p 
+Connect DB : mysql -h database-11.cd24qqsi65uh.us-east-1.rds.amazonaws.com -P 3306 -u alzi -p 
 Password : Alji123!
 
 5. kumpulkan quiz ini dengan menyertakan link dan step by step quiz(untuk instance kalo sudah nyala tidak perlu diulang lagi membuatnya cukup screenshoot instance yang sedang berjalannya) 
